\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.2-8}{
  \itemize{
    \item In tmerge, if data2 contains identifiers not found in data1
    these rows are now counted in the "missid" column of the tcount
    attribute, rather than treated as an error.
    \item In a survfit() call with the start.time option, if one curve
    had no subjects past the start time the dim of the result was wrong,
    leading to multiple downstream failures.
    \item Add a scale argument to quantile.survfit.
    \item Revert a change to plot.survfit, which was the use of clip() to
    keep lines away from the right margin.  This had some unforseen downstream
    consequences, e.g., later addition of a legend.
    \item Minor fix to survcheck: if the events table had only 1 row the
    matrix property was lost. Pointed out by Oleguer Plana-Ripoll.
    \item Error in plot.survfit: the noplot argument had been overlooked
    for the confidence intervals, and the wrong interval could be matched to
    each curve.
    \item The neardate routine implicitly assumed that data set 2 was in
    sorted order, if it is not an error message ensues from the internal
    call to findInterval.  Now repaired and a new test added.  Pointed
    out by Bruce Macwilliams.
    \item Add an error message to survfit recognizing that it can not
    yet deal with multistate coxph models that have shared baseline
    hazards.
    \item Add the pseudo function for psuedo-values. The vignette is in
    vignette2 since it uses svyglm (survey) to get better standard
    errors (see 'other' vignette).
    Add supporting routine residuals.survfit (which does the real work.)
    \item Add the nsk function.
    \item Add the aggregate.survfit method
    \item Formally depricate survConcordance, replaced with the more capable
    concordance method which has formula, lm, glm, and coxph methods.    
}}

\section{Changes in version 3.2-7}{
  \itemize{