@@ -13,7 +13,7 @@ For the package there are three cases:
 \begin{enumerate}
   \item If there is only one departure state, then there is a fast closed
     form solution, shown below.  This case occurs whenever an event time
-    is unique, i.e., no other event times are tied with this one.  It also
+    is unique, i.e., no other event times are tied with this one.  This always
     holds for competing risk models.
   \item If the rate matrix $R$ is upper triangular and the (non-zero) diagonal
     elements are distinct, there is a fast matrix decomposition algorithm.
